# article-opentelemetry-newrelic

./: .env.local  .env.staging  Cargo.toml  LICENSE  Makefile  README.md
.docker/: docker-compose.yml  migration.sql
bins/consumers/: Cargo.toml
bins/consumers/src/: main.rs
bins/consumers/src/consumers/: simple.rs
bins/http_server/: Cargo.toml
bins/http_server/src/: main.rs  openapi.rs
bins/http_server/src/controllers/: todos.rs
bins/http_server/src/routes/: mod.rs  todos.rs
bins/http_server/src/viewmodels/: mod.rs  todos.rs
bins/rabbitmq_consumer/: Cargo.toml
bins/rabbitmq_consumer/src/: main.rs
bins/rabbitmq_consumer/src/consumers/: mod.rs  simple.rs
infra/: Cargo.toml
infra/src/repositories/: mod.rs  todo.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/amqp/: mod.rs
shared/src/models/: todo.rs
shared/src/repositories/: mod.rs  todo.rs
shared/src/viewmodels/: simple_msg.rs
