[package]
name = "infra"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared"}

httpw = { workspace = true }

async-trait = { version = "0.1.67" }
deadpool-postgres = { version = "0.10.5" }
postgres = { version = "0.19.5", features = ["with-uuid-1", "with-chrono-0_4"] }
uuid = { version = "1.3.1", features = ["v4"] }
chrono = { version = "0.4.24" }
opentelemetry = { version = "0.19.0" }
tracing = { version = "0.1.37" }
