[package]
name = "http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
infra = { path = "../../infra" }
shared = { path = "../../shared" }

configs = { workspace = true }
configs-builder = { workspace = true }
logging = { workspace = true }
http-components = { workspace = true }
httpw = { workspace = true }
amqp = { workspace = true }
traces = { workspace = true  }
metrics = { workspace = true  }
health-readiness = { workspace = true }
sql-pool = { workspace = true, features = ["postgres"] }

actix-web = { version = "4.3.1" }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = { version = "1.0.95" }
opentelemetry = { version = "0.19.0" }
async-trait = { version = "0.1.68" }
deadpool-postgres = { version = "0.10.5" }
tracing = { version = "0.1.37" }
tokio = { version = "1.27.0", features = ["default", "rt-multi-thread", "macros", "signal"] }
utoipa = { version = "3.2.1", features = ["actix_extras"] }
lapin = { version = "2.1.1" }